@startuml
!pragma layout smetana
scale 2
hide circle
skinparam classAttributeIconSize 0

class Command {
    --
    + execute(recipe: Recipe, inventory: Inventory): void
    + execute(inventory: Inventory): void
    + getIndex(): int
}

class CookCommand {
    - index: int
    --
    + CookCommand(isExit: boolean, index: int)
    + execute(recipe: Recipe, inventory: Inventory): void
    + getIndex(): int
}

class DeleteIngredientCommand {
    - nameOrIndex: String
    - quantityToRemove: double
    - isRemoveAll: boolean
    --
    + DeleteIngredientCommand(nameOrIndex: String, quantityToRemove: double)
    + execute(inventory: Inventory): void
}

class IngredientRequirements <<utility>> {
    --
    {static} + aggregateFor(recipe: Recipe): ArrayList<Ingredient>
}

class Recipe {
    - name: String
    - ingredients: ArrayList<Ingredient>
    --
    + getName(): String
    + getIngredients(): ArrayList<Ingredient>
}

class Inventory {
    - ingredients: ArrayList<Ingredient>
    --
    + findIndexByName(name: String): int
    + getIngredient(index: int): Ingredient
    + getSize(): int
    + removeIngredient(index: int): void
    + updateQuantity(index: int, quantityToRemove: double): void
}

class Ingredient {
    - name: String
    - quantity: double
    - unit: String
    --
    + Ingredient(name: String, quantity: double, unit: String)
    + getName(): String
    + getQuantity(): double
    + getUnit(): String
    + addQuantity(quantity: double, expiryDate: LocalDate): void
    + deductQuantity(quantityToDeduct: double): void
}

class Ui {
    --
    {static} + printMessage(message: String): void
    {static} + printError(message: String): void
}

together {
    class CookCommand
    class DeleteIngredientCommand
}

' Inheritance
CookCommand --|> Command
DeleteIngredientCommand --|> Command

' Cook flow dependencies
CookCommand ..> Recipe
CookCommand ..> Inventory
CookCommand ..> IngredientRequirements
CookCommand ..> DeleteIngredientCommand
CookCommand ..> Ui
DeleteIngredientCommand ..> Inventory
DeleteIngredientCommand ..> Ui
IngredientRequirements ..> Recipe

' Data relationships required by cooking
Recipe "1" o-- "*" Ingredient
Inventory "1" o-- "*" Ingredient

@enduml
